objects/Patient__c.object
<CustomObject>
    <description>This object will store all the information about patients</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) -  YEAR( DOB__c )</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Fee__c</fullName>
        <formula>Registration_Fee__c  - ( Registration_Fee__c  *  Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <description>This field will store the first name of the patient</description>
        <label>First name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Related_Info__c</fullName>
        <label>Payment Related Info</label>
        <summaryForeignKey>Payment__c.Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Present_Address__c</fullName>
        <label>Present Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Fee__c</fullName>
        <label>Registration Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Registration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <recordTypes>
        <fullName>General_Patient_Record_Type</fullName>
        <active>true</active>
        <label>General Patient Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Record_Type</fullName>
        <active>true</active>
        <label>Master Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>VIP_Record_Type</fullName>
        <active>true</active>
        <label>VIP Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fee_check</fullName>
        <active>true</active>
        <errorConditionFormula>Registration_Fee__c  &lt; 500</errorConditionFormula>
        <errorDisplayField>Registration_Fee__c</errorDisplayField>
        <errorMessage>Registration Fee shud be equal or greater than 500</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_check</fullName>
        <active>true</active>
        <description>This validation rule will make sure that user enters 10 digit phone number</description>
        <errorConditionFormula>OR( LEN( Phone__c )  &lt; 10,LEN( Phone__c )  &gt; 10 )</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>The phone number should be 10 digits</errorMessage>
    </validationRules>
</CustomObject>